Mark elements as viewport constrained when they become sticky positioned

Previously changing an element from sticky to non-sticky would remove it
from the set of viewport constrained elements, but the inverse was not
honored. This caused broken behavior if you cycled the position for an
element between sticky and any other position.

BUG=685658
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2706673002
Cr-Commit-Position: refs/heads/master@{#452467}

Former-commit-id: c4550918a382319dd463b8ca7735f5b32f39ccbe